# checkcord

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
checkcord/: __init__.py  __main__.py
checkcord/cli/: __init__.py  main.py  runner.py  wizard.py
checkcord/core/: __init__.py  checker.py  config.py  generator.py  ratelimiter.py  util.py
checkcord/models/: __init__.py
checkcord/util/: __init__.py  debug.py  pomelo_debug.py
tests/: conftest.py  test_generators.py  test_imports.py  test_models.py
